First set of tests for Synthetics and refactoring to read from file.

--- a/samples/sample.adoc
+++ b/samples/sample.adoc
@@ -6,9 +6,13 @@
 data class Person(val name: String,                                  <1>
                   val age: Int? = null)                             <2>
 
+
 fun main(args: Array<String>) {                                      <3>
+    val otherPersons = ArrayList<String>()
+
     val persons = listOf(Person("Alice"),
                          Person("Bob", age = 29))                   <4>
+
 
     val oldest = persons.maxBy { it.age ?: 0 }                       <5>
     println("The oldest is: $oldest")                                <6>
